--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "a phone generator app",
   "main": "server.js",
   "scripts": {
-    "test": "jest *.test.js -i --watchAll",
-    "coverage": "jest *.test.js -i --coverage && cat coverage/lcov.info | coveralls",
+    "test": "jest *.test.js --watchAll --forceExit --detectOpenHandles --verbose --coverage --maxWorkers=1",
+    "coverage": "jest *.test.js -i --detectOpenHandles --coverage && cat coverage/lcov.info | coveralls",
     "start": "nodemon server.js"
   },
   "author": "nice",
